# template

./: .gitignore  .rumdl.toml  .rustfmt.toml  AGENTS.md  Cargo.toml  Justfile  README.md
.github/prompts/: pb-build.prompt.md  pb-init.prompt.md  pb-plan.prompt.md
.github/workflows/: ci.yml
.opencode/skills/pb-build/: SKILL.md
.opencode/skills/pb-build/references/: implementer_prompt.md
.opencode/skills/pb-init/: SKILL.md
.opencode/skills/pb-plan/: SKILL.md
.opencode/skills/pb-plan/references/: design_template.md  tasks_template.md
crates/template-core/: Cargo.toml
crates/template-core/src/: apply.rs  error.rs  lib.rs  parser.rs  source.rs
crates/template-core/tests/: integration.rs
docs/: design.md  tasks.md
