[workspace]
members = ["bin/*", "crates/*"]
resolver = "3"

[workspace.package]
version = "0.1.0"
edition = "2024"

[workspace.dependencies]
assert_cmd = "2"
clap = "4.5.54"
console = "0.16.2"
eyre = "0.6.12"
indicatif = "0.18.3"
predicates = "3"
tempfile = "3.24.0"
thiserror = "2.0.18"
tracing = "0.1.44"
tracing-subscriber = "0.3.22"
walkdir = "2.5.0"

[profile.release]
lto = true
codegen-units = 1
strip = true
panic = "abort"
