[workspace]
members = ["bin/*", "crates/*"]
resolver = "3"

[workspace.package]
version = "0.1.0"
edition = "2024"

[workspace.dependencies]
assert_cmd = "2.2.1"
clap = "4.6.1"
console = "0.16.3"
eyre = "0.6.12"
ignore = "0.4.25"
indicatif = "0.18.4"
predicates = "3.1.4"
tempfile = "3.27.0"
thiserror = "2.0.18"
tracing = "0.1.44"
tracing-subscriber = "0.3.23"
walkdir = "2.5.0"

[profile.release]
lto = true
codegen-units = 1
strip = true
panic = "abort"
